--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maulikchopra.github.io",
   "repository": {
     "type": "git",
     "url": "git@github.com:maulikchopra/maulikchopra.github.io.git"
