--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & deploy
+name: Build & Deploy
 
 on:
   push:
@@ -18,9 +18,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 13.x
+          node-version: "16.x" # Use LTS version like 16.x
 
       - name: Install NPM packages
         run: npm ci
@@ -28,11 +28,12 @@ jobs:
       - name: Build project
         run: npm run build
 
+      # Uncomment this if you have tests to run
       # - name: Run tests
       #   run: npm run test
 
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3 # Updated to v3
         with:
           name: production-files
           path: ./build
@@ -45,7 +46,7 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3 # Updated to v3
         with:
           name: production-files
           path: ./build
